--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bull": "^4.16.0",
     "cloudinary": "^2.3.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
