--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bull": "^4.16.0",
+    "campusmeet-backend": "file:",
     "cloudinary": "^2.3.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mjml": "^4.15.3",
     "moment": "^2.30.1",
@@ -31,6 +33,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "socket.io": "^4.7.5"
   }
 }
